Fixed categories on main page not aligning vertically when wrapping.

--- a/frontend/pages/index/style.css
+++ b/frontend/pages/index/style.css
@@ -136,6 +136,8 @@
 }
 
 .category {
+    display: flex;
+    flex-direction: column;
     text-align: center;
 }
 
@@ -145,6 +147,7 @@
     cursor: pointer;
     padding: 0;
     display: inline-block;
+    width: min-content;
     background-color: #EAEAEA;
 }
 
